@@ -30,6 +30,7 @@ Version ?.?.? (not yet released)
  * When -v, log reasons for symbol conversion choices (tag/branch/exclude).
  * Log preferred parent determinations at verbose (rather than debug) level.
  * Log symbol transformations at verbose (rather than warn) level.
+ * Log statistics about all symbol transformations at normal level.
 
  Miscellaneous:
  * cvs2svn now requires Python version 2.4 or later.
